# forcastpkg

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  demo_package.py  pyproject.toml  requirements.txt  setup.py  validate_package.py
.github/: FUNDING.yml
app/: __init__.py  auth.py  main.py
app/api/: __init__.py  analysis.py  market.py  news.py  weather.py
app/models/: __init__.py
app/services/: analysis.py  forecasting.py  market_data.py  news.py  weather.py
examples/: example_usage.py
forcasting_pkg/: __init__.py
forcasting_pkg/analysis/: __init__.py
forcasting_pkg/cli/: __init__.py
forcasting_pkg/crypto/: __init__.py  breakout_detection.py  data_ingestion.py  pipeline.py
forcasting_pkg/data/: __init__.py
forcasting_pkg/examples/: __init__.py  advanced_usage.py  basic_usage.py
forcasting_pkg/forecasting/: __init__.py  arima.py  base.py  linear.py  moving_avg.py
forcasting_pkg/models/: __init__.py
forcasting_pkg/visualization/: __init__.py
legacy/tests/: test_api.py
notebooks/: tutorial.ipynb
scripts/: run_crypto_breakouts.py
tests_pkg/: __init__.py  test_crypto_module.py  test_forcasting_pkg.py
