[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forcasting-pkg"
version = "0.1.0"
authors = [
    {name = "Forcasting Package Contributors", email = "forcasting-pkg@example.com"},
]
description = "A comprehensive forecasting and technical analysis toolkit for financial markets"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "forecasting",
    "finance", 
    "trading",
    "technical-analysis",
    "arima",
    "machine-learning",
    "time-series",
    "stocks",
    "cryptocurrency",
    "market-analysis",
]
dependencies = [
    "pydantic>=2.8.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0", 
    "numpy>=1.24.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "python-dateutil>=2.8.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
]

[project.optional-dependencies]
full = [
    "statsmodels>=0.14.0,<0.15.0",
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.20.0,<6.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "ccxt>=4.2.0,<5.0.0",
]
crypto = [
    "ccxt>=4.2.0,<5.0.0",
]
visualization = [
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.20.0,<6.0.0",
    "seaborn>=0.12.0,<1.0.0",
]
stats = [
    "statsmodels>=0.14.0,<0.15.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "black>=24.0.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/joeeddy/WebscraperApp"
"Bug Reports" = "https://github.com/joeeddy/WebscraperApp/issues"
"Source" = "https://github.com/joeeddy/WebscraperApp"
"Documentation" = "https://github.com/joeeddy/WebscraperApp/blob/main/README.md"

[project.scripts]
forcasting-cli = "forcasting_pkg.cli:main"

[tool.setuptools.packages.find]
include = ["forcasting_pkg*"]
exclude = ["tests*", "app*"]

[tool.setuptools.package-data]
forcasting_pkg = [
    "examples/*.py",
    "examples/*.ipynb",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | app
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["forcasting_pkg"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests_pkg",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = ["forcasting_pkg"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "matplotlib.*",
    "plotly.*",
    "sklearn.*",
    "statsmodels.*",
]
ignore_missing_imports = true